<resources>
	<string name="app_name">DigiLavita</string>
	<string name="wachtwoord_vergeten">Wachtwoord vergeten</string>
	<string name="bestellingen">Bestellingen</string>
	<string name="dagschotel">Dagschotel</string>
	<string name="home">Home</string>
	<string name="profiel">Profiel</string>
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="notification_bell">Notification Bell</string>
	<string name="gerechten">Gerechten</string>
	<string name="burgers">Burgers</string>
	<string name="burger">burger</string>
	<string name="salade">salade</string>
	<string name="salades">Salades</string>
	<string name="soep">soep</string>
	<string name="soepen">Soepen</string>
	<string name="vlees">vlees</string>
	<string name="Vlees">Vlees</string>
	<string name="seafood">seafood</string>
	<string name="zeevruchten">Zeevruchten</string>
	<string name="drink">Drink</string>
	<string name="drinken">Drinken</string>
	<string name="broodjes">Broodjes</string>
	<string name="Broodje">broodje</string>
	<string name="pizza">pizza</string>
	<string name="pizza_s">Pizza\'s</string>
	<string name="inloggen">Inloggen</string>
	<string name="wachtwoord">Wachtwoord</string>
	<string name="bevestigen">Bevestigen</string>
	<string name="code_invullen">Code invullen</string>
	<string name="email">Email</string>
	<string name="code_verzenden">Code verzenden</string>
	<string name="logo">Logo</string>
	<string name="banner">Banner</string>
	<string name="background">Background</string>
	<string name="navigation_bar_background">Navigation Bar background</string>
	<string name="medewerkernummer">Medewerkernummer</string>
	<string name="nieuwe_wachtwoord">Nieuwe Wachtwoord</string>
	<string name="wachtwoord_bevestigen">Wachtwoord Bevestigen</string>
	<string name="opslaan">Opslaan</string>
	<string name="la_vita_e_bella_e_waiter">La Vita E Bella E-Waiter</string>
	<string name="macaroni_kaas">Macaroni Kaas</string>
	<string name="lasagna">Lasagna</string>
	<string name="macaroni">Macaroni</string>
	<string name="rundvlees_rare_gekookt">Rundvlees - Rare gekookt</string>
	<string name="rundvlees_medium_rare">Rundvlees - Medium rare</string>
	<string name="rundvlees_medium_gekookt">Rundvlees - Medium gekookt</string>
	<string name="pizza_four_seasons">Pizza Four-seasons</string>
	<string name="pizza_pepperoni">Pizza Pepperoni</string>
	<string name="cheese_burger">Cheese Burger</string>
	<string name="salade_sonoma">Salade Sonoma</string>
	<string name="cordon_blue">Cordon Blue</string>
	<string name="john_doe">John Doe</string>
	<string name="pepperoni">Pepperoni</string>
	<string name="vier_seizoenen">Vier Seizoenen</string>
	<string name="bief_burger">Bief Burger</string>
	<string name="Salade">Salade</string>
	<string name="Seafood">Seafood</string>
	<string name="roode_soep">Roode Soep</string>
	<string name="tomaat_soep">Tomaat soep</string>
	<string name="Tomaat_Soep">Tomaat Soep</string>
	<string name="tomaten_soep">Tomaten Soep</string>
	<string name="Drinken">Drinken</string>
	<string name="pepsi">Pepsi</string>
	<string name="coca_cola">Coca Cola</string>
	<string name="meldingen">Meldingen</string>
</resources>
