<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:theme="@style/ThemeOverlay.AppCompat.Light"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".fragments.HomeFragment">



	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:background="@drawable/ic_mainmenu6"
		android:scaleType="centerCrop">


		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<RelativeLayout
				android:layout_marginTop="32dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp">

				<ImageView
					android:layout_alignParentEnd="true"
					android:layout_width="38dp"
					android:layout_height="38dp"
					android:background="@drawable/ic_notification"
					android:clickable="true"
					android:focusable="true"
					android:id="@+id/notification"
					android:foreground="?attr/selectableItemBackgroundBorderless"
					android:contentDescription="@string/notification_bell">
				</ImageView>



				<com.github.florent37.shapeofview.shapes.RoundRectView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					app:shape_roundRect_borderWidth="2dp"
					app:shape_roundRect_borderColor="@android:color/white"
					android:elevation="4dp"
					app:shape_roundRect_bottomLeftRadius="10dp"
					app:shape_roundRect_bottomRightRadius="10dp"
					app:shape_roundRect_topLeftRadius="10dp"
					app:shape_roundRect_topRightRadius="10dp"
					app:layout_constraintHorizontal_bias="0.09"
					app:layout_constraintVertical_bias="0.050">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textSize="18sp"
						android:textAlignment="center"
						android:layout_margin="6.5dp"
						android:text="@string/gerechten"
						android:textColor="@android:color/white" />


				</com.github.florent37.shapeofview.shapes.RoundRectView>

			</RelativeLayout>

			<GridLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:columnOrderPreserved="false"
				android:alignmentMode="alignMargins"
				android:rowCount="4"
				android:columnCount="2"
				android:layout_marginTop="60dp"
				android:layout_marginBottom="80dp">

				<androidx.cardview.widget.CardView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_columnWeight="1"
					android:layout_rowWeight="1"
					android:elevation="6dp"
					app:cardCornerRadius="12dp"
					android:layout_margin="12dp"
					android:clickable="true"
					android:focusable="true"
					android:id="@+id/burgers"
					android:foreground="?attr/selectableItemBackgroundBorderless">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="center"
						android:padding="16dp"
						android:orientation="vertical">

						<ImageView
							android:src="@drawable/burgers"
							android:layout_width="100dp"
							android:layout_height="100dp"
							android:contentDescription="@string/burger">
						</ImageView>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/burgers"
							android:textColor="#6f6f6f"
							android:textSize="18sp"
							android:layout_marginTop="12dp">
						</TextView>

					</LinearLayout>

				</androidx.cardview.widget.CardView>

				<androidx.cardview.widget.CardView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_columnWeight="1"
					android:layout_rowWeight="1"
					android:elevation="6dp"
					app:cardCornerRadius="12dp"
					android:layout_margin="12dp"
					android:clickable="true"
					android:focusable="true"
					android:id="@+id/pizzas"
					android:foreground="?attr/selectableItemBackgroundBorderless">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="center"
						android:padding="16dp"
						android:orientation="vertical">

						<ImageView
							android:src="@drawable/pizzas"
							android:layout_width="100dp"
							android:layout_height="100dp"
							android:contentDescription="@string/pizza">
						</ImageView>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/pizza_s"
							android:textColor="#6f6f6f"
							android:textSize="18sp"
							android:layout_marginTop="12dp">
						</TextView>

					</LinearLayout>

				</androidx.cardview.widget.CardView>

				<androidx.cardview.widget.CardView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_columnWeight="1"
					android:layout_rowWeight="1"
					android:elevation="6dp"
					app:cardCornerRadius="12dp"
					android:layout_margin="12dp"
					android:clickable="true"
					android:focusable="true"
					android:id="@+id/broodjes"
					android:foreground="?attr/selectableItemBackgroundBorderless">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="center"
						android:padding="16dp"
						android:orientation="vertical">

						<ImageView
							android:src="@drawable/broodje"
							android:layout_width="100dp"
							android:layout_height="100dp"
							android:contentDescription="@string/Broodje">
						</ImageView>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/broodjes"
							android:textColor="#6f6f6f"
							android:textSize="18sp"
							android:layout_marginTop="12dp">

						</TextView>

					</LinearLayout>

				</androidx.cardview.widget.CardView>

				<androidx.cardview.widget.CardView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_columnWeight="1"
					android:layout_rowWeight="1"
					android:elevation="6dp"
					app:cardCornerRadius="12dp"
					android:layout_margin="12dp"
					android:clickable="true"
					android:focusable="true"
					android:id="@+id/salades"
					android:foreground="?attr/selectableItemBackgroundBorderless">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="center"
						android:padding="16dp"
						android:orientation="vertical">

						<ImageView
							android:src="@drawable/salads"
							android:layout_width="100dp"
							android:layout_height="100dp"
							android:contentDescription="@string/salade">
						</ImageView>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/salades"
							android:textColor="#6f6f6f"
							android:textSize="18sp"
							android:layout_marginTop="12dp">
						</TextView>

					</LinearLayout>

				</androidx.cardview.widget.CardView>

				<androidx.cardview.widget.CardView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_columnWeight="1"
					android:layout_rowWeight="1"
					android:elevation="6dp"
					app:cardCornerRadius="12dp"
					android:layout_margin="12dp"
					android:clickable="true"
					android:focusable="true"
					android:id="@+id/soepen"
					android:foreground="?attr/selectableItemBackgroundBorderless">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="center"
						android:padding="16dp"
						android:orientation="vertical">

						<ImageView
							android:src="@drawable/soeps"
							android:layout_width="100dp"
							android:layout_height="100dp"
							android:contentDescription="@string/soep">
						</ImageView>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/soepen"
							android:textColor="#6f6f6f"
							android:textSize="18sp"
							android:layout_marginTop="12dp">
						</TextView>

					</LinearLayout>

				</androidx.cardview.widget.CardView>

				<androidx.cardview.widget.CardView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_columnWeight="1"
					android:layout_rowWeight="1"
					android:elevation="6dp"
					app:cardCornerRadius="12dp"
					android:layout_margin="12dp"
					android:clickable="true"
					android:focusable="true"
					android:id="@+id/vlees"
					android:foreground="?attr/selectableItemBackgroundBorderless">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="center"
						android:padding="16dp"
						android:orientation="vertical">

						<ImageView
							android:src="@drawable/steak"
							android:layout_width="100dp"
							android:layout_height="100dp"
							android:contentDescription="@string/vlees">
						</ImageView>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/Vlees"
							android:textColor="#6f6f6f"
							android:textSize="18sp"
							android:layout_marginTop="12dp">
						</TextView>

					</LinearLayout>

				</androidx.cardview.widget.CardView>

				<androidx.cardview.widget.CardView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_columnWeight="1"
					android:layout_rowWeight="1"
					android:elevation="6dp"
					app:cardCornerRadius="12dp"
					android:layout_margin="12dp"
					android:clickable="true"
					android:focusable="true"
					android:id="@+id/zeevruchten"
					android:foreground="?attr/selectableItemBackgroundBorderless">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="center"
						android:padding="16dp"
						android:orientation="vertical">

						<ImageView
							android:src="@drawable/seafoods"
							android:layout_width="100dp"
							android:layout_height="100dp"
							android:contentDescription="@string/seafood">
						</ImageView>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/zeevruchten"
							android:textColor="#6f6f6f"
							android:textSize="18sp"
							android:layout_marginTop="12dp">
						</TextView>

					</LinearLayout>

				</androidx.cardview.widget.CardView>

				<androidx.cardview.widget.CardView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_columnWeight="1"
					android:layout_rowWeight="1"
					android:elevation="6dp"
					app:cardCornerRadius="12dp"
					android:layout_margin="12dp"
					android:clickable="true"
					android:focusable="true"
					android:id="@+id/drinken"
					android:foreground="?attr/selectableItemBackgroundBorderless">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="center"
						android:padding="16dp"
						android:orientation="vertical">
						<ImageView
							android:src="@drawable/drinks"
							android:layout_width="100dp"
							android:layout_height="100dp"
							android:contentDescription="@string/drink">
						</ImageView>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/drinken"
							android:textColor="#6f6f6f"
							android:textSize="18sp"
							android:layout_marginTop="12dp">
						</TextView>

					</LinearLayout>

				</androidx.cardview.widget.CardView>

			</GridLayout>

		</LinearLayout>

	</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
