<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:context=".fragments.DailyFragment">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:background="@drawable/ic_mainmenu6"
		android:scaleType="centerCrop">


		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<RelativeLayout
				android:layout_marginTop="32dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp">

				<ImageView
					android:layout_alignParentEnd="true"
					android:layout_width="38dp"
					android:layout_height="38dp"
					android:background="@drawable/ic_notification"
					android:clickable="true"
					android:focusable="true"
					android:id="@+id/notification"
					android:foreground="?attr/selectableItemBackgroundBorderless"
					android:contentDescription="@string/notification_bell">
				</ImageView>



				<com.github.florent37.shapeofview.shapes.RoundRectView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					app:shape_roundRect_borderWidth="2dp"
					app:shape_roundRect_borderColor="@android:color/white"
					android:elevation="4dp"
					app:shape_roundRect_bottomLeftRadius="10dp"
					app:shape_roundRect_bottomRightRadius="10dp"
					app:shape_roundRect_topLeftRadius="10dp"
					app:shape_roundRect_topRightRadius="10dp"
					app:layout_constraintHorizontal_bias="0.09"
					app:layout_constraintVertical_bias="0.050">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textSize="18sp"
						android:textAlignment="center"
						android:layout_margin="6.5dp"
						android:text="@string/dagschotel"
						android:textColor="@android:color/white" />


				</com.github.florent37.shapeofview.shapes.RoundRectView>

			</RelativeLayout>

			<GridLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:columnOrderPreserved="false"
				android:alignmentMode="alignMargins"
				android:rowCount="10"
				android:columnCount="1"
				android:layout_marginTop="60dp"
				android:layout_marginBottom="80dp">

				<androidx.cardview.widget.CardView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_columnWeight="1"
					android:layout_rowWeight="1"
					android:elevation="6dp"
					app:cardCornerRadius="12dp"
					android:layout_margin="12dp"
					android:clickable="true"
					android:focusable="true"
					android:id="@+id/section1"
					android:foreground="?attr/selectableItemBackgroundBorderless">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="center"
						android:padding="16dp"
						android:orientation="vertical">

						<ImageView
							android:src="@drawable/cheeseburger"
							android:scaleType="centerCrop"
							android:layout_width="match_parent"
							android:layout_height="200dp"
							android:contentDescription="@string/burger">
						</ImageView>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/cheese_burger"
							android:textColor="#6f6f6f"
							android:textSize="24sp"
							android:layout_marginTop="12dp">
						</TextView>

					</LinearLayout>

				</androidx.cardview.widget.CardView>

				<androidx.cardview.widget.CardView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_columnWeight="1"
					android:layout_rowWeight="1"
					android:elevation="6dp"
					app:cardCornerRadius="12dp"
					android:layout_margin="12dp"
					android:clickable="true"
					android:focusable="true"
					android:id="@+id/section2"
					android:foreground="?attr/selectableItemBackgroundBorderless">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="center"
						android:padding="16dp"
						android:orientation="vertical">

						<ImageView
							android:src="@drawable/peperoni"
							android:scaleType="centerCrop"
							android:layout_width="match_parent"
							android:layout_height="200dp"
							android:contentDescription="@string/pizza">
						</ImageView>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/pizza_pepperoni"
							android:textColor="#6f6f6f"
							android:textSize="24sp"
							android:layout_marginTop="12dp">
						</TextView>

					</LinearLayout>

				</androidx.cardview.widget.CardView>

				<androidx.cardview.widget.CardView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_columnWeight="1"
					android:layout_rowWeight="1"
					android:elevation="6dp"
					app:cardCornerRadius="12dp"
					android:layout_margin="12dp"
					android:clickable="true"
					android:focusable="true"
					android:id="@+id/section3"
					android:foreground="?attr/selectableItemBackgroundBorderless">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="center"
						android:padding="16dp"
						android:orientation="vertical">

						<ImageView
							android:src="@drawable/fourseason"
							android:scaleType="centerCrop"
							android:layout_width="match_parent"
							android:layout_height="200dp"
							android:contentDescription="@string/Broodje">
						</ImageView>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/pizza_four_seasons"
							android:textColor="#6f6f6f"
							android:textSize="24sp"
							android:layout_marginTop="12dp">

						</TextView>

					</LinearLayout>

				</androidx.cardview.widget.CardView>

				<androidx.cardview.widget.CardView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_columnWeight="1"
					android:layout_rowWeight="1"
					android:elevation="6dp"
					app:cardCornerRadius="12dp"
					android:layout_margin="12dp"
					android:clickable="true"
					android:focusable="true"
					android:id="@+id/section4"
					android:foreground="?attr/selectableItemBackgroundBorderless">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="center"
						android:padding="16dp"
						android:orientation="vertical">

						<ImageView
							android:src="@drawable/sonomasalad"
							android:scaleType="centerCrop"
							android:layout_width="match_parent"
							android:layout_height="200dp"
							android:contentDescription="@string/salade">
						</ImageView>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/salade_sonoma"
							android:textColor="#6f6f6f"
							android:textSize="24sp"
							android:layout_marginTop="12dp">
						</TextView>

					</LinearLayout>

				</androidx.cardview.widget.CardView>

				<androidx.cardview.widget.CardView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_columnWeight="1"
					android:layout_rowWeight="1"
					android:elevation="6dp"
					app:cardCornerRadius="12dp"
					android:layout_margin="12dp"
					android:clickable="true"
					android:focusable="true"
					android:id="@+id/section5"
					android:foreground="?attr/selectableItemBackgroundBorderless">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="center"
						android:padding="16dp"
						android:orientation="vertical">

						<ImageView
							android:src="@drawable/steak1"
							android:scaleType="centerCrop"
							android:layout_width="match_parent"
							android:layout_height="200dp"
							android:contentDescription="@string/vlees">
						</ImageView>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/rundvlees_medium_gekookt"
							android:textColor="#6f6f6f"
							android:textSize="24sp"
							android:layout_marginTop="12dp">
						</TextView>

					</LinearLayout>

				</androidx.cardview.widget.CardView>

				<androidx.cardview.widget.CardView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_columnWeight="1"
					android:layout_rowWeight="1"
					android:elevation="6dp"
					app:cardCornerRadius="12dp"
					android:layout_margin="12dp"
					android:clickable="true"
					android:focusable="true"
					android:id="@+id/section6"
					android:foreground="?attr/selectableItemBackgroundBorderless">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="center"
						android:padding="16dp"
						android:orientation="vertical">

						<ImageView
							android:src="@drawable/steak2"
							android:scaleType="centerCrop"
							android:layout_width="match_parent"
							android:layout_height="200dp"
							android:contentDescription="@string/vlees">
						</ImageView>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/rundvlees_medium_rare"
							android:textColor="#6f6f6f"
							android:textSize="24sp"
							android:layout_marginTop="12dp">
						</TextView>

					</LinearLayout>

				</androidx.cardview.widget.CardView>

				<androidx.cardview.widget.CardView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_columnWeight="1"
					android:layout_rowWeight="1"
					android:elevation="6dp"
					app:cardCornerRadius="12dp"
					android:layout_margin="12dp"
					android:clickable="true"
					android:focusable="true"
					android:id="@+id/section7"
					android:foreground="?attr/selectableItemBackgroundBorderless">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="center"
						android:padding="16dp"
						android:orientation="vertical">

						<ImageView
							android:src="@drawable/steak3"
							android:scaleType="centerCrop"
							android:layout_width="match_parent"
							android:layout_height="200dp"
							android:contentDescription="@string/vlees">
						</ImageView>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/rundvlees_rare_gekookt"
							android:textColor="#6f6f6f"
							android:textSize="24sp"
							android:layout_marginTop="12dp">
						</TextView>

					</LinearLayout>

				</androidx.cardview.widget.CardView>

				<androidx.cardview.widget.CardView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_columnWeight="1"
				android:layout_rowWeight="1"
				android:elevation="6dp"
				app:cardCornerRadius="12dp"
				android:layout_margin="12dp"
				android:clickable="true"
				android:focusable="true"
				android:id="@+id/section8"
				android:foreground="?attr/selectableItemBackgroundBorderless">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="center"
					android:padding="16dp"
					android:orientation="vertical">
					<ImageView
						android:src="@drawable/lasagna"
						android:scaleType="centerCrop"
						android:layout_width="match_parent"
						android:layout_height="200dp"
						android:contentDescription="@string/macaroni">
					</ImageView>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/lasagna"
						android:textColor="#6f6f6f"
						android:textSize="24sp"
						android:layout_marginTop="12dp">
					</TextView>

				</LinearLayout>

			</androidx.cardview.widget.CardView>

				<androidx.cardview.widget.CardView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_columnWeight="1"
					android:layout_rowWeight="1"
					android:elevation="6dp"
					app:cardCornerRadius="12dp"
					android:layout_margin="12dp"
					android:clickable="true"
					android:focusable="true"
					android:id="@+id/section9"
					android:foreground="?attr/selectableItemBackgroundBorderless">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="center"
						android:padding="16dp"
						android:orientation="vertical">
						<ImageView
							android:src="@drawable/cordonblue"
							android:scaleType="centerCrop"
							android:layout_width="match_parent"
							android:layout_height="200dp"
							android:contentDescription="@string/broodjes">
						</ImageView>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/cordon_blue"
							android:textColor="#6f6f6f"
							android:textSize="24sp"
							android:layout_marginTop="12dp">
						</TextView>

					</LinearLayout>

				</androidx.cardview.widget.CardView>

				<androidx.cardview.widget.CardView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_columnWeight="1"
					android:layout_rowWeight="1"
					android:elevation="6dp"
					app:cardCornerRadius="12dp"
					android:layout_margin="12dp"
					android:clickable="true"
					android:focusable="true"
					android:id="@+id/section10"
					android:foreground="?attr/selectableItemBackgroundBorderless">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="center"
						android:padding="16dp"
						android:orientation="vertical">
						<ImageView
							android:src="@drawable/macaronicheese"
							android:scaleType="centerCrop"
							android:layout_width="match_parent"
							android:layout_height="200dp"
							android:contentDescription="@string/macaroni">
						</ImageView>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/macaroni_kaas"
							android:textColor="#6f6f6f"
							android:textSize="24sp"
							android:layout_marginTop="12dp">
						</TextView>

					</LinearLayout>

				</androidx.cardview.widget.CardView>

			</GridLayout>

		</LinearLayout>

	</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
